[workspace]
members = [
    "transport",
    "bootstrap-redux",
    "hash-tool",
]
resolver = "2"

[patch.crates-io]
ark-ff = { git = "https://github.com/openmina/algebra", branch = "openmina" }
ark-ec = { git = "https://github.com/openmina/algebra", branch = "openmina" }
ark-poly = { git = "https://github.com/openmina/algebra", branch = "openmina" }
ark-serialize = { git = "https://github.com/openmina/algebra", branch = "openmina" }
# ark-ff = { path = "/home/sebastien/github/algebra/ff" }
# ark-ec = { path = "/home/sebastien/github/algebra/ec" }
# ark-poly = { path = "/home/sebastien/github/algebra/poly" }
# ark-serialize = { path = "/home/sebastien/github/algebra/serialize" }

[patch.'https://github.com/o1-labs/proof-systems']
mina-hasher = { git = "https://github.com/openmina/proof-systems", branch = "ledger-newtypes" }
mina-signer = { git = "https://github.com/openmina/proof-systems", branch = "ledger-newtypes" }
mina-curves = { git = "https://github.com/openmina/proof-systems", branch = "ledger-newtypes" }
o1-utils = { git = "https://github.com/openmina/proof-systems", branch = "ledger-newtypes" }
kimchi = { git = "https://github.com/openmina/proof-systems", branch = "ledger-newtypes" }
mina-poseidon = {git = "https://github.com/openmina/proof-systems", branch = "ledger-newtypes"}
poly-commitment = {git = "https://github.com/openmina/proof-systems", branch = "ledger-newtypes"}

# mina-hasher = { path = "/home/sebastien/github/proof-systems/hasher" }
# mina-signer = { path = "/home/sebastien/github/proof-systems/signer" }
# mina-curves = { path = "/home/sebastien/github/proof-systems/curves" }
# o1-utils = { path = "/home/sebastien/github/proof-systems/utils" }
# kimchi = { path = "/home/sebastien/github/proof-systems/kimchi" }
# oracle = { path = "/home/sebastien/github/proof-systems/oracle" }
