[workspace]
members = [
    "transport",
    "bootstrap-sandbox",
    "hash-tool",
    "gossipsub-sandbox",
    "libp2p-rpc-behaviour",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.28", features = ["macros", "rt-multi-thread"] }
libp2p = { git = "https://github.com/openmina/rust-libp2p.git", branch = "webrtc-v0.51.3", default-features = false, features = ["macros", "tokio", "gossipsub", "tcp", "noise", "pnet", "yamux", "dns"] }
binprot = { git = "https://github.com/openmina/binprot-rs", rev = "dfbd3bbda8b2681d86ac73065523c658ee31d45d" }
mina-p2p-messages = { git = "https://github.com/openmina/mina-p2p-messages-rs", features = ["hashing"], rev = "e989a8957db0bde6007a8aceb39db409a9b0a308" }
libp2p-rpc-behaviour = { path = "libp2p-rpc-behaviour" }
mina-tree = { git = "https://github.com/openmina/ledger", branch = "rampup4" }
mina-signer = { git = "https://github.com/openmina/proof-systems", branch = "ledger-newtypes-rampup4" }

[patch.crates-io]
ark-ff = { git = "https://github.com/openmina/algebra", branch = "openmina" }
ark-ec = { git = "https://github.com/openmina/algebra", branch = "openmina" }
ark-poly = { git = "https://github.com/openmina/algebra", branch = "openmina" }
ark-serialize = { git = "https://github.com/openmina/algebra", branch = "openmina" }
# ark-ff = { path = "/home/sebastien/github/algebra/ff" }
# ark-ec = { path = "/home/sebastien/github/algebra/ec" }
# ark-poly = { path = "/home/sebastien/github/algebra/poly" }
# ark-serialize = { path = "/home/sebastien/github/algebra/serialize" }

[patch.'https://github.com/o1-labs/proof-systems']
mina-hasher = { git = "https://github.com/openmina/proof-systems", branch = "ledger-newtypes-rampup4" }
mina-signer = { git = "https://github.com/openmina/proof-systems", branch = "ledger-newtypes-rampup4" }
mina-curves = { git = "https://github.com/openmina/proof-systems", branch = "ledger-newtypes-rampup4" }
o1-utils = { git = "https://github.com/openmina/proof-systems", branch = "ledger-newtypes-rampup4" }
kimchi = { git = "https://github.com/openmina/proof-systems", branch = "ledger-newtypes-rampup4" }
mina-poseidon = {git = "https://github.com/openmina/proof-systems", branch = "ledger-newtypes-rampup4"}
poly-commitment = {git = "https://github.com/openmina/proof-systems", branch = "ledger-newtypes-rampup4"}

# mina-hasher = { path = "/home/sebastien/github/proof-systems/hasher" }
# mina-signer = { path = "/home/sebastien/github/proof-systems/signer" }
# mina-curves = { path = "/home/sebastien/github/proof-systems/curves" }
# o1-utils = { path = "/home/sebastien/github/proof-systems/utils" }
# kimchi = { path = "/home/sebastien/github/proof-systems/kimchi" }
# oracle = { path = "/home/sebastien/github/proof-systems/oracle" }
