[workspace]
members = [
    "transport",
    "bootstrap-sandbox",
    "hash-tool",
    "gossipsub-sandbox",
    "libp2p-rpc-behaviour",
    "interpreter",
]
resolver = "2"

[workspace.dependencies]
libp2p-rpc-behaviour = { path = "libp2p-rpc-behaviour" }
tokio = { version = "1.28", features = ["macros", "rt-multi-thread", "io-std"] }
libp2p = { git = "https://github.com/openmina/rust-libp2p.git", branch = "webrtc-v0.51.3", default-features = false, features = ["macros", "tokio", "gossipsub", "tcp", "noise", "pnet", "yamux", "dns"] }
mina-p2p-messages = { git = "https://github.com/openmina/mina-p2p-messages-rs", features = ["hashing"], rev = "3b697ae" }
mina-tree = { git = "https://github.com/openmina/ledger", rev = "d18603502b9da6de84d94aee817ce1bb28cfe129" }
mina-signer = { git = "https://github.com/openmina/proof-systems", branch = "ledger-newtypes-rampup4" }
mina-curves = { git = "https://github.com/openmina/proof-systems", branch = "ledger-newtypes-rampup4" }

[patch.crates-io]
ark-ff = { git = "https://github.com/openmina/algebra", branch = "openmina" }
ark-ec = { git = "https://github.com/openmina/algebra", branch = "openmina" }
ark-poly = { git = "https://github.com/openmina/algebra", branch = "openmina" }
ark-serialize = { git = "https://github.com/openmina/algebra", branch = "openmina" }

[patch.'https://github.com/o1-labs/proof-systems']
mina-hasher = { git = "https://github.com/openmina/proof-systems", branch = "ledger-newtypes-rampup4" }
mina-signer = { git = "https://github.com/openmina/proof-systems", branch = "ledger-newtypes-rampup4" }
mina-curves = { git = "https://github.com/openmina/proof-systems", branch = "ledger-newtypes-rampup4" }
o1-utils = { git = "https://github.com/openmina/proof-systems", branch = "ledger-newtypes-rampup4" }
kimchi = { git = "https://github.com/openmina/proof-systems", branch = "ledger-newtypes-rampup4" }
mina-poseidon = {git = "https://github.com/openmina/proof-systems", branch = "ledger-newtypes-rampup4"}
poly-commitment = {git = "https://github.com/openmina/proof-systems", branch = "ledger-newtypes-rampup4"}
