[package]
name = "bootstrap-redux"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = { version = "0.10.0" }
tokio = { version = "1.28", features = ["macros", "sync"] }
libp2p = { git = "https://github.com/openmina/rust-libp2p.git", branch = "develop", features = ["serde"] }

log = { version = "0.4.17" }
hex = { version = "0.4.3" }
derive_more = { version = "0.99.17" }
serde = { version = "1.0", features = ["derive"] }

mina-p2p-messages = { git = "https://github.com/openmina/mina-p2p-messages-rs.git", branch = "new-types-feb-23" }
binprot = { git = "https://github.com/openmina/binprot-rs", rev = "ead5ba916725abf8ab212b89985b47c79d1a006a" }

redux = { git = "https://github.com/openmina/redux-rs.git", features = ["serde"] }

libp2p-service = { path = "../libp2p-service" }
