[package]
name = "bootstrap-redux"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = { version = "0.10.0" }
tokio = { version = "1.28", features = ["macros", "sync", "rt-multi-thread"] }
libp2p = { git = "https://github.com/openmina/rust-libp2p.git", branch = "develop", features = ["serde"] }

log = { version = "0.4.17" }
hex = { version = "0.4.3" }
derive_more = { version = "0.99.17" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
adhocerr = { version = "0.1.2" }

binprot = { git = "https://github.com/openmina/binprot-rs", rev = "dfbd3bbda8b2681d86ac73065523c658ee31d45d" }
mina-p2p-messages = { git = "https://github.com/openmina/mina-p2p-messages-rs", features = ["hashing"], rev = "94fd3389acdf6986aa6731b0e64f5cd8b0db5eed" }

redux = { git = "https://github.com/openmina/redux-rs.git", features = ["serde"] }
mina-tree = { git = "https://github.com/openmina/ledger.git", branch = "main" }
mina-signer = { git = "https://github.com/openmina/proof-systems", branch = "ledger-newtypes" }

mina-transport = { path = "../transport" }
