[package]
name = "openmina-bootstrap-sandbox"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = { version = "0.10.0" }
structopt = { version = "0.3.26" }
log = { version = "0.4.17" }
serde = { version = "1.0" }
serde_json = { version = "1.0", features = ["preserve_order"] }
thiserror = { version = "1.0" }

bs58 = { version = "0.5.0" }
rand = { version = "0.8.5" }

reqwest = { version = "0.11.18", features = ["blocking"] }

tokio = { version = "1.28", features = ["macros", "sync", "rt-multi-thread", "time", "sync"] }
libp2p = { git = "https://github.com/openmina/rust-libp2p", branch="webrtc-v0.51.3", default-features = false }
mina-transport = { path = "../transport" }
libp2p-rpc-behaviour = { git = "https://github.com/openmina/openmina", branch = "feat/standalone_snark_worker" }
binprot = { git = "https://github.com/openmina/binprot-rs", rev = "dfbd3bbda8b2681d86ac73065523c658ee31d45d" }
mina-p2p-messages = { git = "https://github.com/openmina/mina-p2p-messages-rs", features = ["hashing"], rev = "52bc0e3c12931627e89fc925fc1ed1f8418e77ee" }
mina-tree = { git = "https://github.com/openmina/ledger.git", branch = "main" }
mina-signer = { git = "https://github.com/openmina/proof-systems", branch = "ledger-newtypes" }
