[package]
name = "openmina-bootstrap-sandbox"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = { version = "0.10.0" }
structopt = { version = "0.3.26" }
log = { version = "0.4.17" }
serde = { version = "1.0" }
serde_json = { version = "1.0", features = ["preserve_order"] }
thiserror = { version = "1.0" }

bs58 = { version = "0.5.0", features = ["check"] }
rand = { version = "0.8.5" }
base64 = { version = "0.21.3" }
hex = { version = "0.4.3" }

reqwest = { version = "0.11.18", features = ["blocking"] }

tokio = { workspace = true }
libp2p = { workspace = true }
mina-transport = { path = "../transport" }
libp2p-rpc-behaviour = { workspace = true }
mina-p2p-messages = { workspace = true }
mina-tree = { workspace = true }
mina-signer = { workspace = true }
mina-curves = { workspace = true }
