[package]
name = "hash-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
structopt = { version = "0.3.26" }
bs58 = { version = "0.5.0", features = ["check"] }
hex = { version = "0.4.3" }
reqwest = { version = "0.11.13", features = ["blocking"] }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
ctrlc = { version = "3.3.1" }

mina-p2p-messages = { git = "https://github.com/openmina/mina-p2p-messages-rs.git", branch = "new-types-feb-23" }
binprot = { git = "https://github.com/openmina/binprot-rs", rev = "ead5ba916725abf8ab212b89985b47c79d1a006a" }
mina-tree = { git = "https://github.com/openmina/ledger.git", branch = "ocaml-interop-optional" }
