[package]
name = "hash-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
structopt = { version = "0.3.26" }
bs58 = { version = "0.5.0", features = ["check"] }
hex = { version = "0.4.3" }
reqwest = { version = "0.11.13", features = ["blocking"] }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
ctrlc = { version = "3.3.1" }

binprot = { git = "https://github.com/openmina/binprot-rs", rev = "dfbd3bbda8b2681d86ac73065523c658ee31d45d" }
mina-p2p-messages = { git = "https://github.com/openmina/mina-p2p-messages-rs", features = ["hashing"], rev = "52bc0e3c12931627e89fc925fc1ed1f8418e77ee" }
mina-tree = { git = "https://github.com/openmina/ledger.git", branch = "main" }
