[package]
name = "hash-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
structopt = { version = "0.3.26" }
bs58 = { version = "0.5.0", features = ["check"] }
hex = { version = "0.4.3" }
reqwest = { version = "0.11.13", features = ["blocking"] }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
ctrlc = { version = "3.3.1" }

binprot = { workspace = true }
mina-p2p-messages = { workspace = true }
mina-tree = { workspace = true }
