[package]
name = "openmina-interpreter"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = { version = "0.10.0" }
structopt = { version = "0.3.26" }
thiserror = { version = "1.0" }
log = { version = "0.4.17" }
hex = { version = "0.4.3" }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
ctrlc = { version = "3.4.1" }
rand = { version = "0.8.5" }
bs58 = { version = "0.5.0", features = ["check"] }

tokio = { workspace = true }
libp2p = { workspace = true }
mina-transport = { path = "../transport" }
libp2p-rpc-behaviour = { workspace = true }
binprot = { workspace = true }
mina-p2p-messages = { workspace = true }
mina-tree = { workspace = true }
mina-signer = { workspace = true }
mina-curves = { workspace = true }
