[package]
name = "mina-rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { version = "0.4.18" }
libp2p = { git = "https://github.com/openmina/rust-libp2p.git", branch = "develop" }
binprot = { git = "https://github.com/openmina/binprot-rs", rev = "dfbd3bbda8b2681d86ac73065523c658ee31d45d" }
mina-p2p-messages = { git = "https://github.com/openmina/mina-p2p-messages-rs", features = ["hashing"], rev = "94fd3389acdf6986aa6731b0e64f5cd8b0db5eed" }
mina-transport = { path = "../transport" }
