[package]
name = "mina-transport"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
env_logger = { version = "0.10.0" }
binprot = { git = "https://github.com/openmina/binprot-rs", rev = "dfbd3bbda8b2681d86ac73065523c658ee31d45d" }
mina-p2p-messages = { git = "https://github.com/openmina/mina-p2p-messages-rs", features = ["hashing"], rev = "52bc0e3c12931627e89fc925fc1ed1f8418e77ee" }
tokio = { version = "1.28", features = ["macros", "rt-multi-thread"] }

[dependencies]
mina-rpc-behaviour = { path = "../rpc-behaviour" }
libp2p = { git = "https://github.com/openmina/rust-libp2p.git", branch = "develop", features = ["macros", "tokio", "gossipsub", "tcp", "noise", "pnet", "yamux"] }
blake2 = { version = "0.10.6" }
log = { version = "0.4.17" }
hex = { version = "0.4.3" }
