[package]
name = "mina-transport"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
env_logger = { version = "0.10.0" }
mina-p2p-messages = { git = "https://github.com/openmina/mina-p2p-messages-rs", features = ["hashing"], rev = "52bc0e3c12931627e89fc925fc1ed1f8418e77ee" }
tokio = { version = "1.28", features = ["macros", "rt-multi-thread"] }
mina-rpc-behaviour = { path = "../rpc-behaviour" }

[dependencies]
libp2p = { git = "https://github.com/openmina/rust-libp2p.git", branch = "develop", features = ["macros", "tokio", "gossipsub", "tcp", "noise", "pnet", "yamux"] }
blake2 = { version = "0.10.6" }
log = { version = "0.4.17" }
hex = { version = "0.4.3" }
pin-project-lite = { version = "0.2.10" }
