[package]
name = "mina-transport"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
env_logger = { version = "0.10.0" }
mina-p2p-messages = { workspace = true }
tokio = { workspace = true }
libp2p-rpc-behaviour = { workspace = true }

[dependencies]
libp2p = { workspace = true }
blake2 = { version = "0.10.6" }
log = { version = "0.4.17" }
hex = { version = "0.4.3" }
pin-project-lite = { version = "0.2.10" }
